Add guesses and wordList variables and a randomItem function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,48 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <script type="text/javascript src="js/main.js"></script>
+
+<div class="container">
+  <div class="alphabet">
+    <span class='alpha a'>a</span>
+    <span class='alpha b'>b</span>
+    <span class='alpha c'>c</span>
+    <span class='alpha d'>d</span>
+    <span class='alpha e'>e</span>
+    <span class='alpha f'>f</span>
+    <span class='alpha g'>g</span>
+    <span class='alpha h'>h</span>
+    <span class='alpha i'>i</span>
+    <span class='alpha j'>j</span>
+    <span class='alpha k'>k</span>
+    <span class='alpha l'>l</span>
+    <span class='alpha m'>m</span>
+    <span class='alpha n'>n</span>
+    <span class='alpha o'>o</span>
+    <span class='alpha p'>p</span>
+    <span class='alpha q'>q</span>
+    <span class='alpha r'>r</span>
+    <span class='alpha s'>s</span>
+    <span class='alpha t'>t</span>
+    <span class='alpha u'>u</span>
+    <span class='alpha v'>v</span>
+    <span class='alpha w'>w</span>
+    <span class='alpha x'>x</span>
+    <span class='alpha y'>y</span>
+    <span class='alpha z'>z</span>
+  </div>
+  
+  <div id="board">
+    
+  </div>
+
+  <div class="turns-left">
+    You have <span id="turn-count">7</span> turns left.
+  </div>
+
+</div>
+  
+  <script type="text/javascript" src="js/main.js"></script>
+  
 </body>
 </html>
