--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   </div>
 
 </div>
+
+<h1>Change your turn count!</h1>
+<form>
+    <input type="text" class="count-input">
+    <button class="form-button">Set Turns</button>
+</form>
   
   <script type="text/javascript" src="js/main.js"></script>
   
