--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
     You have <span id="turn-count">7</span> turns left.
   </div>
 
-</div>
+  <div class="word">
+    
+  </div>
 
-<h1>Change your turn count!</h1>
+</div>
+<!-- 
+<h1 class="change-turns">Change your turn count!</h1>
 <form>
     <input type="text" class="count-input">
     <button class="form-button">Set Turns</button>
-</form>
+</form> -->
   
   <script type="text/javascript" src="js/main.js"></script>
   
