added keystroke functionality.  cheater alert.

--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
 
 <div class="container">
   <div class="alphabet">
-    <span class='alpha a'>a</span>
-    <span class='alpha b'>b</span>
-    <span class='alpha c'>c</span>
-    <span class='alpha d'>d</span>
-    <span class='alpha e'>e</span>
-    <span class='alpha f'>f</span>
-    <span class='alpha g'>g</span>
-    <span class='alpha h'>h</span>
-    <span class='alpha i'>i</span>
-    <span class='alpha j'>j</span>
-    <span class='alpha k'>k</span>
-    <span class='alpha l'>l</span>
-    <span class='alpha m'>m</span>
-    <span class='alpha n'>n</span>
-    <span class='alpha o'>o</span>
-    <span class='alpha p'>p</span>
-    <span class='alpha q'>q</span>
-    <span class='alpha r'>r</span>
-    <span class='alpha s'>s</span>
-    <span class='alpha t'>t</span>
-    <span class='alpha u'>u</span>
-    <span class='alpha v'>v</span>
-    <span class='alpha w'>w</span>
-    <span class='alpha x'>x</span>
-    <span class='alpha y'>y</span>
-    <span class='alpha z'>z</span>
+    <span id="a" class='alpha a'>a</span>
+    <span id="b" class='alpha b'>b</span>
+    <span id="c" class='alpha c'>c</span>
+    <span id="d" class='alpha d'>d</span>
+    <span id="e" class='alpha e'>e</span>
+    <span id="f" class='alpha f'>f</span>
+    <span id="g" class='alpha g'>g</span>
+    <span id="h" class='alpha h'>h</span>
+    <span id="i" class='alpha i'>i</span>
+    <span id="j" class='alpha j'>j</span>
+    <span id="k" class='alpha k'>k</span>
+    <span id="l" class='alpha l'>l</span>
+    <span id="m" class='alpha m'>m</span>
+    <span id="n" class='alpha n'>n</span>
+    <span id="o" class='alpha o'>o</span>
+    <span id="p" class='alpha p'>p</span>
+    <span id="q" class='alpha q'>q</span>
+    <span id="r" class='alpha r'>r</span>
+    <span id="s" class='alpha s'>s</span>
+    <span id="t" class='alpha t'>t</span>
+    <span id="u" class='alpha u'>u</span>
+    <span id="v" class='alpha v'>v</span>
+    <span id="w" class='alpha w'>w</span>
+    <span id="x" class='alpha x'>x</span>
+    <span id="y" class='alpha y'>y</span>
+    <span id="z" class='alpha z'>z</span>
   </div>
   
   <div id="board">
